# notes

./: .gitignore  README.md  build.sh  mkdocs.yml  pyproject.toml  requirements.txt
blanc/: base.html  gallery.html  list.html  main.html  profile.html  tree.html  updates.html
blanc/partials/: analytics.html  breadcrumbs.html  footer.html  katex.html  list.html  nav.html  seo.html
blanc/res/: style.css  style.css.sass  style.profile.css.sass
docs/: about.md  index.md  projects.md  quotes.md  updates.md
docs/notes/: index.md  tree.md
docs/notes/em-properties/: band-theroy-conductivity.md  drude-model.md  free-electron-gas.md  hall-effect.md  index.md  wave-velocity.md
docs/notes/hardware/: index.md  mvno.md
docs/notes/home-improvement/: index.md
docs/notes/kinetics/: index.md
docs/notes/linear-algebra/: index.md  least-square-fitting.md  projection-operator.md
docs/notes/mech-properties/: index.md
docs/notes/ml-potential/: behler-parrinell-symmetry-function.md  index.md
docs/notes/molecular-dynamics/: blender-visualization.md  index.md  lammps-thermoelasticity.md  non-analytical-term-correction.md  opt-step.md  oszicar.md  r2scan.md  thermostating.md  trajectory-visualization.md  vasp-tips.md
docs/notes/mphys/: anisotropy.md  continuum-physics.md  finite-strain-eos.md  index.md  peridotite.md  vrh-average.md
docs/notes/nyc/: bagels.md  (+2 more)
plugins/mkdocs-blogging/: setup.py
plugins/mkdocs-compile-sass/: setup.py
plugins/mkdocs-jinja2-load-extensions/: setup.py
plugins/mkdocs-subpages/: setup.py
plugins/mkdocs-wikilinks-enabler/: setup.py
(+58 files in other folders)
