[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Chenxing Luo"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
Pygments = "^2.11.2"
pymdown-extensions = "^9.2"
mdx-truly-sane-lists = "^1.2"
markdown-captions = "^2.1.1"
mkdocs-minify-plugin = "^0.5.0"
jinja2-time = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
